@@ -1,5 +1,8 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#2496] Fix newtargets support: since Nmap 7.92, scripts could not add
+  targets in script pre-scanning phase. [Daniel Miller]
+
 o [GH#2468] Scripts dhcp-discover and broadcast-dhcp-discover now support
   setting a client identifier. [nnposter]
 
